--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint --ext .jsx --ext .js pages/"
   },
   "dependencies": {
+    "custom-env": "^2.0.1",
     "firebase": "^7.15.1",
     "next": "9.4.4",
     "react": "16.13.1",
@@ -19,6 +20,7 @@
     "eslint": "^7.2.0",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-react": "^7.20.0",
+    "eslint-plugin-react-hooks": "^4.0.4",
     "prettier": "^2.0.5"
   },
   "prettier": {
