--- a/package.json
+++ b/package.json
@@ -6,17 +6,22 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint --ext .jsx --ext .js pages/"
+    "lint": "eslint --ext .jsx --ext .js pages/",
+    "test": "jest --watchAll"
   },
   "dependencies": {
     "custom-env": "^2.0.1",
     "firebase": "^7.15.1",
+    "jest": "^26.0.1",
     "next": "9.4.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "styled-components": "^5.1.1"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.10.1",
+    "@testing-library/react": "^10.2.1",
+    "@testing-library/user-event": "^12.0.2",
     "babel-plugin-styled-components": "^1.10.7",
     "eslint": "^7.2.0",
     "eslint-plugin-prettier": "^3.1.3",
