--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "custom-env": "^2.0.1",
     "firebase": "^7.15.1",
     "jest": "^26.0.1",
-    "next": "9.4.4",
+    "next": "^9.5.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "styled-components": "^5.1.1"
